--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -29,11 +29,11 @@
 		<div class="container main-container">
 	        <div class="row header">
 				<div class="col-sm">
-					<h1>Welcome to [Placeholder]</h1>
+					<h1 class="display-4">squadFeeder</h1>
 				</div>
 			</div>
 
-	        <h3>[Placeholder] helps you decide what food your group wants to eat!</h3>
+	        <h3>squadFeeder helps you decide what food your group wants to eat!</h3>
 	        <h3>continued description here...</h3>
 
 	        <div class="row">
