cleaned up fake group page

--- a/views/group.handlebars
+++ b/views/group.handlebars
@@ -52,8 +52,7 @@
 		
 		<!-- BODY DESCRIPTION -->
 		<div class="row">
-			<div class="col-sm-2"></div>
-			<div class="col-sm-8 text-xs-center">
+			<div class="col-sm-12 text-xs-center">
 				<br>
 				<p>Copy the link below and share it with your friends. Once they click on the link, it will redirect them into a group with you where you can choose your preferences, and start to decide what you guys should eat!</p>
 
@@ -66,14 +65,17 @@
 				</div>
 
 			</div>
-			<div class="col-sm-2"></div>
 		</div>
 		
 		<!-- FACEBOOK BUTTON -->
 		<div class="row">
 			<div class="col-sm-12 text-xs-center">
 				<h3>Share with your friends!</h3>
-				<div class="fb-send" data-href="https://developers.facebook.com/docs/plugins/"></div>
+				<div class="fb-send" data-href="https://cse170collaborate.herokuapp.com/instanceURL"></div>
+				<h3>Joined:</h3>
+				<ul class="list-group">
+					<!-- JQUERY CONTENTS -->
+				</ul>
 			</div>
 		</div>
 
