--- a/views/selection.handlebars
+++ b/views/selection.handlebars
@@ -26,7 +26,7 @@
 				<h1>Selection</h1>
 			</div>
 			<div class="col-sm-4">
-				<a href="./group"><button type="button" class="btn btn-block btn-secondary">Back to Group</button></a>
+				<a href="./instanceURL"><button type="button" class="btn btn-block btn-secondary">Back to Group</button></a>
 			</div>
 		</div>
 
@@ -109,7 +109,7 @@
 			</div>
 			<div class="modal-footer">
 				<a href="./results"><button id="btn-success" type="button" class="btn btn-secondary">(TEST TRIGGER: Everyone Finishes Submission)</button></a>
-				
+
 				<button id="btn-mistake" type="button" class="btn btn-primary btn-color" data-dismiss="modal">I've Made a Mistake!</button>
 			</div>
 		</div>
