--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -38,7 +38,7 @@
 
 	        <div class="row">
 				<div class="col-sm-12 text-xs-center">
-					<a href="./group"><button type="button" class="btn btn-lg btn-primary btn-color btn-submit">Click here to start!</button></a>
+					<a href="./instanceURL"><button type="button" class="btn btn-lg btn-primary btn-color btn-submit">Click here to start!</button></a>
 				</div>
 			</div>
 		</div>
@@ -78,7 +78,5 @@
 	<script src="/js/tether.min.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="/js/index.js"></script>
-
-
 </body>
 </html>
