Map v5 - Added 5 restuarants & info

--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -35,13 +35,13 @@
         </div>
         <div class="row">
             <div class="col-sm-4 text-xs-center">
-                <p>[FOOD]</p>
+                <p>Korean</p>
             </div>
             <div class="col-sm-4 text-xs-center">
-                <p>[FOOD]</p>
+                <p>Asian</p>
             </div>
             <div class="col-sm-4 text-xs-center">
-                <p>[FOOD]</p>
+                <p>Sushi</p>
             </div>
         </div>
         <!-- SHOWS RESULTS -->
@@ -50,24 +50,34 @@
                 <h4>Yelp Results:</h4>
             </div>
             <div class="row">
-                <p>yelp result #1</p>
                 <!-- INSERT YELP RESULT HERE -->
+                <p>manna BBQ</p>
+                <p>Korean</p>
+                <p>4428 Convoy St #210, San Diego, CA 92111</p>
             </div>
             <div class="row">
-                <p>yelp result #2</p>
                 <!-- INSERT YELP RESULT HERE -->
+                <p>Grandma's Tofu Shop</p>
+                <p>Korean</p>
+                <p>4425 Convoy St, San Diego, CA 92111</p>
             </div>
             <div class="row">
-                <p>yelp result #3</p>
                 <!-- INSERT YELP RESULT HERE -->
+                <p>Min Sok Chon</p>
+                <p>Korean</p>
+                <p>4620 Convoy St D, San Diego, CA 92111</p>
             </div>
             <div class="row">
-                <p>yelp result #4</p>
                 <!-- INSERT YELP RESULT HERE -->
+                <p>Tajima Japanese Restaurant</p>
+                <p>Asian</p>
+                <p>4681 Convoy St, San Diego, CA 92111</p>
             </div>
             <div class="row">
-                <p>yelp result #5</p>
                 <!-- INSERT YELP RESULT HERE -->
+                <p>Kula Revolving Sushi Bar</p>
+                <p>Sushi</p>
+                <p>4609 Convoy St f, San Diego, CA 92111</p>
             </div>
         </div>
         <div class="col-sm-6">
