group page fixed, login buttons commented out

--- a/public/css/group.css
+++ b/public/css/group.css
@@ -8,6 +8,8 @@
 	padding: 10px;
 	color: #636363;
 	flex: auto;
+	border-top-right-radius: 0;
+	border-bottom-right-radius: 0;
 }
 
 #copylink button {
