--- a/views/group.handlebars
+++ b/views/group.handlebars
@@ -69,8 +69,7 @@
 		
 		<!-- FACEBOOK BUTTON -->
 		<div class="row">
-			<div class="col-sm-12 text-xs-center">
-				<h3>Share with your friends!</h3>
+			<div class="col-sm-12">
 				<div class="fb-send" data-href="https://cse170collaborate.herokuapp.com/instanceURL"></div>
 				<h3>Joined:</h3>
 				<ul class="list-group">
