--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -19,10 +19,10 @@
 <body class="splash-bg gradient-bg">
 
 	<!-- LOG IN BUTTONS -->
-	<div align="right">
+	<!-- <div align="right">
 		<button onclick="document.getElementById('id01').style.display='block'">Sign Up</button>
 		<button onclick="document.getElementById('id01').style.display='block'">Login</button>
-	</div>
+	</div> -->
 
 	<!-- BODY MAIN SCREEN -->
 	<div align="center">
@@ -45,12 +45,12 @@
 	</div>
 
 	<!-- The Modal -->
-	<div id="id01" class="modal">
+	<!-- <div id="id01" class="modal">
 	  <span onclick="document.getElementById('id01').style.display='none'" 
-	class="close" title="Close Modal">&times;</span>
+	class="close" title="Close Modal">&times;</span> -->
 
 	  <!-- Modal Content -->
-	  <form class="modal-content animate" action="action_page.php">
+	  <!-- <form class="modal-content animate" action="action_page.php">
 	    <div class="imgcontainer">
 	      <img src="img_avatar2.png" alt="Avatar" class="avatar">
 	    </div>
@@ -72,7 +72,7 @@
 	    </div>
 	  </form>
 	</div>
-
+ -->
 	<!-- SCRIPTS -->
 	<script src="/js/jquery-3.1.1.min.js"></script>
 	<script src="/js/tether.min.js"></script>
