--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -51,32 +51,32 @@
             </div>
             <div class="row">
                 <!-- INSERT YELP RESULT HERE -->
-                <p>manna BBQ</p>
-                <p>Korean</p>
+                <p>manna BBQ </p>
+                <p> - Korean</p>
                 <p>4428 Convoy St #210, San Diego, CA 92111</p>
             </div>
             <div class="row">
                 <!-- INSERT YELP RESULT HERE -->
-                <p>Grandma's Tofu Shop</p>
-                <p>Korean</p>
+                <p>Grandma's Tofu Shop </p>
+                <p> - Korean</p>
                 <p>4425 Convoy St, San Diego, CA 92111</p>
             </div>
             <div class="row">
                 <!-- INSERT YELP RESULT HERE -->
-                <p>Min Sok Chon</p>
-                <p>Korean</p>
+                <p>Min Sok Chon </p>
+                <p> - Korean</p>
                 <p>4620 Convoy St D, San Diego, CA 92111</p>
             </div>
             <div class="row">
                 <!-- INSERT YELP RESULT HERE -->
-                <p>Tajima Japanese Restaurant</p>
-                <p>Asian</p>
+                <p>Tajima Japanese Restaurant </p>
+                <p> - Asian</p>
                 <p>4681 Convoy St, San Diego, CA 92111</p>
             </div>
             <div class="row">
                 <!-- INSERT YELP RESULT HERE -->
-                <p>Kula Revolving Sushi Bar</p>
-                <p>Sushi</p>
+                <p>Kula Revolving Sushi Bar </p>
+                <p> - Sushi</p>
                 <p>4609 Convoy St f, San Diego, CA 92111</p>
             </div>
         </div>
