link changed to squadfeeder

--- a/views/group.handlebars
+++ b/views/group.handlebars
@@ -70,7 +70,7 @@
 		<!-- FACEBOOK BUTTON -->
 		<div class="row">
 			<div class="col-sm-12">
-				<div class="fb-send" data-href="https://cse170collaborate.herokuapp.com/instanceURL"></div>
+				<div class="fb-send" data-href="https://squadfeeder.herokuapp.com/instanceURL"></div>
 				<h3>Joined:</h3>
 				<ul class="list-group">
 					<!-- JQUERY CONTENTS -->
