--- a/public/css/results.css
+++ b/public/css/results.css
@@ -1,7 +1,3 @@
-body {
-	background-color: beige;
-}
-
 /*TEXT STYLING*/
 h4 {
 	font-family: 'Open Sans Condensed', sans-serif;
@@ -23,4 +19,12 @@ h4 {
 #map_canvas {
     width: 100%;
     height: 100%;
+}
+
+.results {
+    font-weight: bold;
+}
+
+.results span {
+    opacity: 0.5;
 }
