--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -31,7 +31,7 @@
 
 		<!-- PROGRESSBAR -->
 		<div class="row progress-bg">
-    		<div class="progress-bar progress-bar-custom" role="progressbar" style="width: 100%;">
+    		<div class="progress-bar" role="progressbar" style="width: 100%;">
 			</div>
 		</div>
 
