--- a/views/group.handlebars
+++ b/views/group.handlebars
@@ -15,7 +15,7 @@
 	<!-- SOCKET IO /EARLY SCRIPTS -->
 	<script src="https://cdn.socket.io/socket.io-1.0.0.js"></script>
 	<script>var group = "{{name}}"</script>
-	<!-- <script src="/js/initsocket.js"></script> -->
+	<script src="/js/initsocket.js"></script>
 </head>
 
 <body class="gradient-bg">
@@ -56,7 +56,7 @@
 
 		<!-- PROGRESSBAR -->
 		<div class="row progress-bg">
-    		<div class="progressbar" role="progressbar" style="width: 50%;">
+    		<div class="progressbar" role="progressbar" style="width: 33%;">
 			</div>
 		</div>
 		
