changed text i think

--- a/views/group.handlebars
+++ b/views/group.handlebars
@@ -38,8 +38,11 @@
 	     js.src = "//connect.facebook.net/en_US/sdk.js";
 	     fjs.parentNode.insertBefore(js, fjs);
 	   }(document, 'script', 'facebook-jssdk'));
-</script>
+	</script>
 
+	
+	<div class="container spacer">
+	</div>
 	<div class="container spacer">
 	</div>
 	<div class="container main-container">
@@ -77,7 +80,7 @@
 			</div>
 		</div>
 		
-		<!-- FACEBOOK BUTTON-->
+		<!-- FACEBOOK BUTTON -->
 		<div class="row">
 			<div class="col-sm-12">
 				<!-- <div class="fb-send" data-href={{url}}></div> -->
