anonymous tags, leader system

--- a/views/group.handlebars
+++ b/views/group.handlebars
@@ -83,6 +83,8 @@
 				<!-- <div class="fb-send" data-href={{url}}></div> -->
 			</div>
 		</div>
+
+		<!-- GROUP LIST -->
 		<div class="row">
 			<div class="col-sm-12">
 				<h3>Joined:</h3>
@@ -94,8 +96,9 @@
 
 		<!-- SUBMIT BUTTON -->
 		<div class="row">
-			<div class="col-sm-12 text-xs-center">
-				<button type="button" class="btn btn-lg btn-primary btn-block btn-submit btn-color">Is Everyone Ready?</button>
+			<div class="col-sm-12 text-xs-center div-button">
+				Loading...
+				<!-- JS CONDITIONAL HERE -->
 			</div>
 		</div>
 	</div>
