--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -22,7 +22,7 @@
 	<div align="center">
 		<div class="container main-container">
 	        <div class="row header">
-				<div class="col-sm">
+				<div class="col-sm-12">
 					<h1 class="display-4">squadFeeder</h1>
 				</div>
 			</div>
