--- a/public/css/group.css
+++ b/public/css/group.css
@@ -17,3 +17,13 @@
 	border-bottom-left-radius: 0;
 	border: 1px solid #A9A9A9;
 }
+
+/* WAITING BUTTON */
+.div-waiting {
+	margin-top: 15px;
+	margin-bottom: 15px;
+	text-align: center;
+	padding: 10px;
+	border: 1px solid #636363;
+	border-radius: 5px;
+}
