--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -55,6 +55,7 @@
 	        <div class="col-sm-6">
 	            <h4>Best Choices:</h4>
             	<!-- INSERT DATA HERE, FAKE FOR NOW -->
+                <!-- Yelp Search -->
             	<ul class="list-group">
             		<li class="list-group-item">
 		                <p>manna BBQ (Korean)</p>
@@ -89,9 +90,9 @@
             	</ul>
 	        </div>
 	        <div class="col-sm-6">
-	                <h4>Map:</h4>
+	            <h4>Map:</h4>
 	            <div id="map_wrapper">
-	                <div id="map_canvas" class="mapping"></div>
+	                   <div id="map_canvas" class="mapping"></div>
 	            </div>
 	            </script>
 	        </div>
