--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -28,7 +28,8 @@
 			</div>
 
 	        <h3>squadFeeder helps you decide what food your group wants to eat!</h3>
-	        <h3>Everyone chooses their top 5 choices in separate windows. Then the app tells you what your overall top 3 picks are. Easy and simple! Let's start choosing!</h3>
+	        <h3>Everyone chooses their top 5 choices in separate windows. Then the app tells you what your overall top 3 picks are. Easy and simple!</h3> 
+	        <h3>Let's start choosing!</h3>
 
 	        <div class="row">
 				<div class="col-sm-12 text-xs-center">
