--- a/views/selection.handlebars
+++ b/views/selection.handlebars
@@ -32,7 +32,7 @@
 
 		<!-- PROGRESSBAR -->
 		<div class="row progress-bg">
-    		<div class="progress-bar" role="progressbar" style="width: 66%;">
+    		<div class="progressbar" role="progressbar" style="width: 66%;">
 			</div>
 		</div>
 
