--- a/views/error.handlebars
+++ b/views/error.handlebars
@@ -46,7 +46,7 @@
 	<script src="/js/tether.min.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
 
-	<!-- GOOGLE ANALYTICS -->
+	<!-- GOOGLE ANALYTICS for squad feeder -->
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -54,6 +54,18 @@
 	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
 	  ga('create', 'UA-87206604-1', 'auto');
+	  ga('send', 'pageview');
+
+	</script>
+
+	<!-- GOOGLE ANALYTICS for hcibuild -->
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-87217404-1', 'auto');
 	  ga('send', 'pageview');
 
 	</script>
