--- a/views/selection.handlebars
+++ b/views/selection.handlebars
@@ -128,7 +128,7 @@
 <script src="/js/bootstrap.min.js"></script>
 <script src="/js/selection.js"></script>
 
-<!-- GOOGLE ANALYTICS -->
+<!-- GOOGLE ANALYTICS for squadfeeder-->
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -139,5 +139,17 @@
   ga('send', 'pageview');
 
 </script>
+
+<!-- GOOGLE ANALYTICS for hcibuild -->
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-87217404-1', 'auto');
+	  ga('send', 'pageview');
+
+	</script>
 </body>
 </html>
