added tooltip to clipboard button

--- a/views/group.handlebars
+++ b/views/group.handlebars
@@ -72,7 +72,7 @@
 				<!-- COPY LINK -->
 				<div id="copylink" class="input-group" id="flexbox">
 					<input id="input-link" type="text" value="{{url}}" readonly>
-		    		<button class="btn btn-secondary" type="button" data-clipboard-action="copy" data-clipboard-target="#input-link">
+		    		<button class="btn btn-secondary" type="button" data-clipboard-action="copy" data-clipboard-target="#input-link" data-toggle="tooltip" data-placement="top" title="Copy to Clipboard">
 		    			<img src="/assets/clippy.svg" alt="Copy to clipboard">
 		    		</button>
 				</div>
@@ -156,7 +156,7 @@
 	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
 	  ga('create', 'UA-87206604-1', 'auto');
-	  ga('send', 'pageview');
+	  ga('send', 'pageview', 'button');
 
 	</script>
 
@@ -168,7 +168,7 @@
 	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
 	  ga('create', 'UA-87217404-1', 'auto');
-	  ga('send', 'pageview');
+	  ga('send', 'pageview', 'button');
 
 	</script>
 </body>
