--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -12,8 +12,10 @@
 	<!-- STYLESHEETS -->
 	<link href="/css/main.css" rel="stylesheet">
 	<link href="/css/results.css" rel="stylesheet">
-    <!--FONTS-->
+    <!-- FONTS -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
+    <!-- YELP INITIALIZE -->
+    <script src="/js/yelp_init.js"></script>
 </head>
 
 <body class="gradient-bg">
@@ -41,13 +43,13 @@
         </div>
         <div class="row results">
             <div class="col-sm-4 text-xs-center">
-                <p>Korean: <span>3 votes</span></p>
+                <!-- <p>Korean: <span>3 votes</span></p> -->
             </div>
             <div class="col-sm-4 text-xs-center">
-                <p>Asian: <span>2 votes</span></p>
+                <!-- <p>Asian: <span>2 votes</span></p> -->
             </div>
             <div class="col-sm-4 text-xs-center">
-                <p>Sushi: <span>2 votes</span></p>
+                <!-- <p>Sushi: <span>2 votes</span></p> -->
             </div>
         </div>
         <!-- SHOWS RESULTS -->
@@ -58,34 +60,34 @@
                 <!-- Yelp Search -->
             	<ul class="list-group">
             		<li class="list-group-item">
-		                <p>manna BBQ (Korean)</p>
+		                <!-- <p>manna BBQ (Korean)</p>
 		                <a href="https://www.google.com/maps/dir/Current+Location/4428+Convoy+Street+%23210+SD+92111">
 		                    <p>4428 Convoy St #210, San Diego, CA 92111</p>
-		                </a>
+		                </a> -->
             		</li>
             		<li class="list-group-item">
-		                <p>Grandma's Tofu Shop (Korean)</p>
+		                <!-- <p>Grandma's Tofu Shop (Korean)</p>
 		                <a href="https://www.google.com/maps/dir/Current+Location/Grandma+Tofu+%26+BBQ,+4425+Convoy+Street+SD+92111">
 		                    <p>4425 Convoy St, San Diego, CA 92111</p>
-		                </a>
+		                </a> -->
             		</li>
             		<li class="list-group-item">
-		                <p>Min Sok Chon (Korean)</p>
+		                <!-- <p>Min Sok Chon (Korean)</p>
 		                <a href="https://www.google.com/maps/dir/Current+Location/4620+Convoy+Street+SD+92111">
 		                    <p>4620 Convoy St D, San Diego, CA 92111</p>
-		                </a>
+		                </a> -->
             		</li>
             		<li class="list-group-item">
-		                <p>Tajima Japanese Restaurant (Asian)</p>
+		                <!-- <p>Tajima Japanese Restaurant (Asian)</p>
 		                <a href="https://www.google.com/maps/dir/Current+Location/4681+Convoy+Street+SD+92111">
 		                    <p>4681 Convoy St, San Diego, CA 92111</p>
-		                </a>
+		                </a> -->
             		</li>
             		<li class="list-group-item">
-		                <p>Kula Revolving Sushi Bar (Sushi)</p>
+		                <!-- <p>Kula Revolving Sushi Bar (Sushi)</p>
 		                <a href="https://www.google.com/maps/dir/Current+Location/Kula+Revolving+Sushi+Bar,+4609+Convoy+Street+f,+SD+92111">
 		                    <p>4609 Convoy St f, San Diego, CA 92111</p>
-		                </a>
+		                </a> -->
             		</li>
             	</ul>
 	        </div>
