--- a/views/selection.handlebars
+++ b/views/selection.handlebars
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
 <head>
-	<title>squadFeeder</title>	
+	<title>squadFeeder: {{name}}</title>	
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- LIBRARIES -->
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-flex.min.css" rel="stylesheet">
