--- a/views/group.handlebars
+++ b/views/group.handlebars
@@ -12,6 +12,8 @@
 	<!-- STYLESHEETS -->
 	<link href="/css/main.css" rel="stylesheet"> 
 	<link href="/css/group.css" rel="stylesheet">
+	<!--FONTS-->
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
 	<!-- SOCKET IO /EARLY SCRIPTS -->
 	<script src="https://cdn.socket.io/socket.io-1.0.0.js"></script>
 	<script>var group = "{{name}}"</script>
@@ -60,7 +62,14 @@
     		<div class="progressbar" role="progressbar" style="width: 33%;">
 			</div>
 		</div>
-		
+
+		<!-- FACEBOOK BUTTON -->
+		<div class="row">
+			<div class="col-sm-12">
+				<div class="fb-send" data-href={{url}}></div>
+			</div>
+		</div>
+
 		<!-- BODY DESCRIPTION -->
 		<div class="row">
 			<div class="col-sm-12 text-xs-center">
@@ -75,13 +84,6 @@
 		    		</button>
 				</div>
 
-			</div>
-		</div>
-		
-		<!-- FACEBOOK BUTTON -->
-		<div class="row">
-			<div class="col-sm-12">
-				<div class="fb-send" data-href={{url}}></div>
 			</div>
 		</div>
 
