--- a/views/group.handlebars
+++ b/views/group.handlebars
@@ -17,7 +17,7 @@
 	<!-- SOCKET IO /EARLY SCRIPTS -->
 	<script src="https://cdn.socket.io/socket.io-1.0.0.js"></script>
 	<script>var group = "{{name}}"</script>
-	<script src="/js/initsocket-group.js"></script>
+	<script src="/js/initsocket.js"></script>
 </head>
 
 <body class="gradient-bg">
@@ -53,7 +53,7 @@
 				<h1>Your Squad</h1>
 			</div>
 			<div class="col-sm-4">
-				<a href="./"><button type="button" class="btn btn-block btn-secondary">Back to Home Page</button></a>
+				<a href="/"><button type="button" class="btn btn-block btn-secondary">Back to Home Page</button></a>
 			</div>
 		</div>
 
