--- a/views/error.handlebars
+++ b/views/error.handlebars
@@ -24,7 +24,7 @@
 				<h1>404</h1>
 			</div>
 			<div class="col-sm-4">
-				<a href="./"><button type="button" class="btn btn-block btn-secondary">Back to Home Page</button></a>
+				<a href="/"><button type="button" class="btn btn-block btn-secondary">Back to Home Page</button></a>
 			</div>
 		</div>
 		
@@ -32,8 +32,7 @@
 		<div class="row">
 			<div class="col-sm-12 text-xs-center">
 				<br>
-				<p>Your group is not found! Perhaps you entered
-				the link incorrectly?</p>
+				<p>{{errmsg}}</p>
 			</div>
 		</div>
 	</div>
