--- a/views/selection.handlebars
+++ b/views/selection.handlebars
@@ -14,6 +14,10 @@
 	<link href="/css/selection.css" rel="stylesheet">
 	<!--FONTS-->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
+	<!-- SOCKET IO /EARLY SCRIPTS -->
+	<script src="https://cdn.socket.io/socket.io-1.0.0.js"></script>
+	<script>var group = "{{name}}"</script>
+	<script src="/js/initsocket.js"></script>
 </head>
 
 <body class="gradient-bg">
@@ -97,50 +101,47 @@
 	<div class="container spacer">
 	</div>
 
-<!-- Modal -->
-<div class="modal fade" id="confirmModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-	<div class="modal-dialog" role="document">
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-					<span aria-hidden="true">&times;</span>
-				</button>
-				<h4 class="modal-title" id="myModalLabel">Submitted!</h4>
-			</div>
-			<div class="modal-body">
-				<p>Waiting on other users to complete submissions....</p>
-				<ul class="list-group">
-					<!-- JQUERY CONTENTS -->
-				</ul>
-			</div>
-			<div class="modal-footer">
-				<a href="./results"><button id="btn-success" type="button" class="btn btn-secondary">(TEST TRIGGER: Everyone Finishes Submission)</button></a>
-
-				<button id="btn-mistake" type="button" class="btn btn-primary btn-color" data-dismiss="modal">I've Made a Mistake!</button>
+	<!-- Modal -->
+	<div class="modal fade" id="confirmModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+					<h4 class="modal-title" id="myModalLabel">Submitted!</h4>
+				</div>
+				<div class="modal-body">
+					<p>Waiting on other users to complete submissions....</p>
+					<ul class="list-group">
+						<!-- JQUERY CONTENTS -->
+					</ul>
+				</div>
+				<div class="modal-footer">
+					<button id="btn-mistake" type="button" class="btn btn-primary btn-color" data-dismiss="modal">I've Made a Mistake!</button>
+				</div>
 			</div>
 		</div>
 	</div>
-</div>
 
-<!-- SCRIPTS -->
-<script src="/js/jquery-3.1.1.min.js"></script>
-<script src="/js/tether.min.js"></script>
-<script src="/js/bootstrap.min.js"></script>
-<script src="/js/selection.js"></script>
+	<!-- SCRIPTS -->
+	<script src="/js/jquery-3.1.1.min.js"></script>
+	<script src="/js/tether.min.js"></script>
+	<script src="/js/bootstrap.min.js"></script>
+	<script src="/js/selection.js"></script>
 
-<!-- GOOGLE ANALYTICS for squadfeeder-->
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+	<!-- GOOGLE ANALYTICS for squadfeeder-->
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-87206604-1', 'auto');
-  ga('send', 'pageview');
+	  ga('create', 'UA-87206604-1', 'auto');
+	  ga('send', 'pageview');
+	</script>
 
-</script>
-
-<!-- GOOGLE ANALYTICS for hcibuild -->
+	<!-- GOOGLE ANALYTICS for hcibuild -->
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
