--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -14,6 +14,8 @@
 	<link href="/css/results.css" rel="stylesheet">
     <!-- FONTS -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
+
+    <script>var group = "{{name}}"</script>
 </head>
 
 <body class="gradient-bg">
