--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -14,7 +14,6 @@
 	<link href="/css/results.css" rel="stylesheet">
     <!-- FONTS -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
-
     <script>var group = "{{name}}"</script>
 </head>
 
@@ -33,7 +32,7 @@
 
 		<!-- PROGRESSBAR -->
 		<div class="row progress-bg">
-    		<div class="progress-bar" role="progressbar" style="width: 100%;">
+    		<div class="progressbar" role="progressbar" style="width: 100%;">
 			</div>
 		</div>
 
