--- a/views/selection.handlebars
+++ b/views/selection.handlebars
@@ -21,9 +21,7 @@
 </head>
 
 <body class="gradient-bg">
-	<div class="container spacer">
-	</div>
-
+	<div class="container spacer"></div>
 	<div class="container main-container">
 		<div class="row header">
 			<div class="col-sm-8">
@@ -99,8 +97,7 @@
 		</div>
 	</div>
 
-	<div class="container spacer">
-	</div>
+	<div class="container spacer"></div>
 
 	<!-- Modal -->
 	<div class="modal fade" id="confirmModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
