--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -78,6 +78,8 @@
 
 	<!-- SCRIPTS -->
 	<script src="/js/jquery-3.1.1.min.js"></script>
+	<script src="/js/URI.js"></script>
+	<script src="/js/jsonp.js"></script>
 	<script src="/js/tether.min.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="/js/results.js"></script>
