--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -48,23 +48,21 @@
             </div>
             {{/each}}
         </div>
-        
+
         <!-- SHOWS RESULTS -->
         <div class="row">
 	        <div class="col-sm-6">
 	            <h4>Best Choices:</h4>
-            	<!-- INSERT DATA HERE, FAKE FOR NOW -->
                 <!-- Yelp Search -->
-            	<ul class="list-group">
+            	<div class="results-container">
                     <!-- JQUERY CONTENTS -->
-            	</ul>
+            	</div>
 	        </div>
 	        <div class="col-sm-6">
 	            <h4>Map:</h4>
 	            <div id="map_wrapper">
 	                   <div id="map_canvas" class="mapping"></div>
 	            </div>
-	            </script>
 	        </div>
 	    </div>
 	    <div class="row spacer"></div>
