--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -43,8 +43,8 @@
         <div class="row results">
         	{{#each list}}
             <div class="col-sm-4 text-xs-center">
-                {{this.name}}
-                <p>{{this.val}}</p>
+                <p>{{this.name}}</p>
+                <p><span>{{this.val}} vote</span></p>
             </div>
             {{/each}}
         </div>
