--- a/public/css/results.css
+++ b/public/css/results.css
@@ -32,15 +32,17 @@ h4 {
 
 .results-item {
     display: flex;
+    padding-bottom: 10px;
 }
 
 .results-img {
     flex: 1;
+    width: 75px;
 }
 
 .results-img img {
-    height: 100px;
-    width: 100px;
+    height: 75px;
+    width: 75px;
 }
 
 .results-text {
