location search changes

--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -43,7 +43,7 @@
         <div class="row results">
         	{{#each list}}
             <div class="col-sm-4 text-xs-center">
-                <p>{{this.name}}</p>
+                <p class=".category">{{this.name}}</p>
                 <p><span>{{this.val}} vote</span></p>
             </div>
             {{/each}}
