--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -43,8 +43,7 @@
         <div class="row results">
         	{{#each list}}
             <div class="col-sm-4 text-xs-center">
-                <p class=".category">{{this.name}}</p>
-                <p><span>{{this.val}} vote</span></p>
+                <p><span>{{this.name}}</span> - {{this.val}} vote</span></p>
             </div>
             {{/each}}
         </div>
