--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -77,7 +77,8 @@
 	<script src="/js/results.js"></script>
 
     <!-- GOOGLE MAP API SCRIPT -->
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyABZaEhz5AnijS8IZ8mYWYq-tQJ1dMTNxk&callback=initialize" type="text/javascript"></script>
+    <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyABZaEhz5AnijS8IZ8mYWYq-tQJ1dMTNxk&callback=initialize" type="text/javascript"></script> -->
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyABZaEhz5AnijS8IZ8mYWYq-tQJ1dMTNxk" type="text/javascript"></script>
 
 	<!-- GOOGLE ANALYTICS for squadfeeder-->
 	<script>
