--- a/views/selection.handlebars
+++ b/views/selection.handlebars
@@ -53,7 +53,7 @@
 				<div class="btn-group" data-toggle="buttons">
 					{{#each select-cuisine}}
 					<label class="btn btn-secondary btn-toggle">
-						<input type="checkbox" value="{{this.tag}}">
+						<input type="checkbox" value="{{this.tag}}" onclick="ga('send', 'event', 'button', 'click')">
 						{{this.name}}
 					</label>
 					{{/each}}
