--- a/views/selection2.handlebars
+++ b/views/selection2.handlebars
@@ -18,6 +18,35 @@
 	<script src="https://cdn.socket.io/socket.io-1.0.0.js"></script>
 	<script>var group = "{{name}}"</script>
 	<script src="/js/initsocket.js"></script>
+
+	<!-- SCRIPTS -->
+	<script src="/js/jquery-3.1.1.min.js"></script>
+	<script src="/js/tether.min.js"></script>
+	<script src="/js/bootstrap.min.js"></script>
+	<script src="/js/selection2.js"></script>
+
+	<!-- GOOGLE ANALYTICS for squadfeeder-->
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-87206604-1', 'auto');
+	  ga('send', 'pageview');
+	</script>
+
+	<!-- GOOGLE ANALYTICS for hcibuild -->
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-87217404-1', 'auto');
+	  ga('send', 'pageview');
+
+	</script>
 </head>
 
 <body class="gradient-bg">
@@ -54,7 +83,7 @@
 					<label for="select-option1">1st Choice:</label>
 					<select class="form-control" id="select-option1">
 						{{#each select-cuisine}}
-						<option value="{{this.tag}}" onclick="ga('send', 'event', 'button', 'click')">{{this.name}}</option>
+						<option value="{{this.tag}}" onclick="ga('send', 'event', 'button', 'click', 'Choice 1')">{{this.name}}</option>
 						{{/each}}
 					</select>
 				</div>
@@ -62,7 +91,7 @@
 					<label for="select-option2">2nd Choice:</label>
 					<select class="form-control" id="select-option2">
 						{{#each select-cuisine}}
-						<option value="{{this.tag}}" onclick="ga('send', 'event', 'button', 'click')">{{this.name}}</option>
+						<option value="{{this.tag}}" onclick="ga('send', 'event', 'button', 'click', 'Choice 2')">{{this.name}}</option>
 						{{/each}}
 					</select>
 				</div>
@@ -70,7 +99,7 @@
 					<label for="select-option3">3rd Choice:</label>
 					<select class="form-control" id="select-option3">
 						{{#each select-cuisine}}
-						<option value="{{this.tag}}" onclick="ga('send', 'event', 'button', 'click')">{{this.name}}</option>
+						<option value="{{this.tag}}" onclick="ga('send', 'event', 'button', 'click', 'Choice 3')">{{this.name}}</option>
 						{{/each}}
 					</select>
 				</div>
@@ -138,34 +167,5 @@
 			</div>
 		</div>
 	</div>
-
-	<!-- SCRIPTS -->
-	<script src="/js/jquery-3.1.1.min.js"></script>
-	<script src="/js/tether.min.js"></script>
-	<script src="/js/bootstrap.min.js"></script>
-	<script src="/js/selection2.js"></script>
-
-	<!-- GOOGLE ANALYTICS for squadfeeder-->
-	<script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-	  ga('create', 'UA-87206604-1', 'auto');
-	  ga('send', 'pageview');
-	</script>
-
-	<!-- GOOGLE ANALYTICS for hcibuild -->
-	<script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-	  ga('create', 'UA-87217404-1', 'auto');
-	  ga('send', 'pageview');
-
-	</script>
 </body>
 </html>
