forgot end code

--- a/views/selection.handlebars
+++ b/views/selection.handlebars
@@ -43,7 +43,7 @@
 
 	  ga('create', 'UA-87206604-1', 'auto');
 	  ga('send', 'pageview');
-	  ga('send', 'event', 'button', 'click')
+	  ga('send', 'event', 'button', 'click');
 	</script>
 
 	<!-- GOOGLE ANALYTICS for hcibuild -->
