--- a/views/selection2.handlebars
+++ b/views/selection2.handlebars
@@ -34,6 +34,7 @@
 
 	  ga('create', 'UA-87206604-1', 'auto');
 	  ga('send', 'pageview');
+	  ga('send', 'event', 'button', 'click');
 	</script>
 
 	<!-- GOOGLE ANALYTICS for hcibuild -->
